# apc524tachepProject

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst  ising2D.rst
src/ising2D/: __init__.py
tests/: __init__.py  test_basic.py
