[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ising2D"
version = "0.1"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
    "numpy",
    "numba",
    "matplotlib",
]
docs = [
    "sphinx",
]

[tool.ruff]
select = [
    "E","F", "W",
    "B",
    "I",
    "RUF",
    "UP",
]

[[tool.mypy.overrides]]
module = ["numba.*",]
ignore_missing_imports = true
